--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -2,9 +2,8 @@
 user <%= @process_user %>;
 worker_processes <%= @processorcount %>;
 
-error_log <%= @log_dir %>/error.log;
+error_log <%= @config_log_dir %>/error.log;
 
-#pid <%= @pid_file %>;
 pid <%= @config_pid_file %>;
 
 events {
@@ -13,18 +12,17 @@ events {
 
 http {
  server_tokens off;
-# include <%= @config_dir %>/mime.types;
  include <%= @config_directory %>/mime.types;
 
  default_type application/octet-stream;
 
- access_log <%= @log_dir %>/access.log;
+ access_log <%= @config_log_dir %>/access.log;
 
  sendfile on;
  #tcp_nopush on;
  tcp_nodelay on;
 
- include <%= @confd %>/*.conf;
+ include <%= @config_confd %>/*.conf;
 <% if @vdir_enable %>
  include <%= @vdir_enable %>/*;
 <% end %>
