--- a/templates/vhost/vhost.conf.erb
+++ b/templates/vhost/vhost.conf.erb
@@ -5,7 +5,7 @@ server {
  root <%= @vhost_docroot %>;
  server_name <%= @name %> <%= @serveraliases %>;
 
- access_log <%= @log_dir %>/<%= @name %>.access.log;
- error_log <%= @log_dir %>/<%= @name %>.error.log;
+ access_log <%= @config_log_dir %>/<%= @name %>.access.log;
+ error_log <%= @config_log_dir %>/<%= @name %>.error.log;
 
 }
